Actualizo archivos tex

--- a/Source/Tesis/capitulo3.tex
+++ b/Source/Tesis/capitulo3.tex
@@ -333,7 +333,7 @@ En la teledetección por microondas la celda de resolución es de unos metros mi
 
 \begin{figure}[hbt]
 	\centering    
-	\includegraphics[scale=0.7]{../../Figures/Tesis/Capitulo3/Backscatter.pdf}
+	\includegraphics[scale=1]{../../Figures/Tesis/Capitulo3/Backscatter2.pdf}
 	\caption{\label{Backscatter}Radiación reflejada por distintos objetos en la superficie terrestre.}
 \end{figure} 
 
@@ -442,7 +442,7 @@ Finalmente se presenta la aleatoriedad de la formación del ruido speckle, lo qu
 %Cribari-Neto et al.~\cite{CribariFrerySilva:CSDA} proponen el uso de bootstrap para el mismo fin. 
 %Allende et al.~\cite{AllendeFreryetal:JSCS:05} y Bustos et al.~\cite{BustosFreryLucini:Mestimators:2001} plantean mejoras para la estimación del parámetro de textura, pero con foco en su robustez. 
 %
-%%Entre las técnicas de estimación paramétrica clásicas se encuentran las de máxima verosimilitud y momentos. Recientemente en ~\cite{MellinAnalysisPolSAR,BujorTrouveValetNicolas2004,khan2014} han propuesto estimadores del parámetro de textura basado logcumulants y logmomentos, donde interviene la transforamda de Mellin de la función de densidad. En Tison et al.~\cite{Tison2004} los autores mostraron que los estimadors de los parámetros de la distribución $\mathcal G^0$, para datos de amplitud, mejoran al estimador de máxima verosimilitud.
+%%Entre las técnicas de estimación paramétrica clásicas se encuentran las de máxima verosimilitud y momentos. Recientemente en ~\cite{MellinAnalysisPolSAR,BujorTrouveValetNicolas2004,khan2014} han propuesto estimadores del parámetro de textura basado logcumulantes y logmomentos, donde interviene la transforamda de Mellin de la función de densidad. En Tison et al.~\cite{Tison2004} los autores mostraron que los estimadors de los parámetros de la distribución $\mathcal G^0$, para datos de amplitud, mejoran al estimador de máxima verosimilitud.
 %%
 %%Es importante mencionar que, entre las propiedades que se espera que un buen estimador posea, son la consistencia, insesgadez, eficiencia, robustez y normalidad asintótica. Son conocidas las buenas propiedades asintóticas que posee el estimador de máxima verosimilitud. 
 %%Sin embargo, en algunas situaciones como es el caso de la estimación del parámetro de textura de la distribución $\mathcal G_I^0$, este estimador no se comporta adecuadamente para el caso donde el tamaño de muestra es chico. 
