--- a/Source/Tesis/formulario_E_Julia.tex
+++ b/Source/Tesis/formulario_E_Julia.tex
@@ -38,9 +38,9 @@ desarrollados y completos): Universidad Nacional de General Sarmiento.
 
 	\item Descripción física del trabajo de Tesis (cantidad total de páginas, imágenes, planos, videos, archivos digitales, etc.):
 	\begin{itemize}%[leftmargin=25.00003pt,labelsep=5pt]
-		\item 154 páginas;
-		\item 14 tablas;
-		\item 58 figuras.
+		\item 140 páginas;
+		\item 13 tablas;
+		\item 61 figuras.
 	\end{itemize}
 
 	\item Alcance geográfico y/o temporal de la Tesis: El alcance geográfico de la tesis es internacional.
@@ -51,7 +51,7 @@ desarrollados y completos): Universidad Nacional de General Sarmiento.
 	
 	Resumen
 	
-	El modelo $\mathcal{G}^0$ es una buena elección para explicar las características estadísticas de datos que provienen de imágenes de radar de apertura sintética (SAR), porque bajo este modelo se pueden caracterizar regiones con diferentes grado de textura a través de sus parámetros.  Esta tesis propone una nueva estrategia para la estimación del parámetro de textura del modelo $\mathcal G_0$ para datos de intensidad, por medio de la minimización de distancias estocásticas entre la función de densidad teórica, y una estimación no paramétrica de la función de densidad subyacente que proviene de los datos observados utilizando núcleos asimétricos. Se comparará el desempeño de estos estimadores, en términos de sesgo y error cuadrático medio, con los obtenidos por el Método de Momentos, Máxima Verosimilitud y Logcumulants. Además se estudiarán propiedades de convergencia, como así también la robustez de los mismos bajo contaminación. 
+	El modelo $\mathcal{G}^0$ es una buena elección para explicar las características estadísticas de datos que provienen de imágenes de radar de apertura sintética (SAR), porque bajo este modelo se pueden caracterizar regiones con diferentes grado de textura a través de sus parámetros.  Esta tesis propone una nueva estrategia para la estimación del parámetro de textura del modelo $\mathcal G_0$ para datos de intensidad, por medio de la minimización de distancias estocásticas entre la función de densidad teórica, y una estimación no paramétrica de la función de densidad subyacente que proviene de los datos observados utilizando núcleos asimétricos. Se comparará el desempeño de estos estimadores, en términos de sesgo y error cuadrático medio, con los obtenidos por el Método de Momentos, Máxima Verosimilitud y Logcumulantes. Además se estudiarán propiedades de convergencia, como así también la robustez de los mismos bajo contaminación. 
 
 
 	\item Resumen en portugués (hasta 1000 caracteres):
@@ -64,7 +64,7 @@ desarrollados y completos): Universidad Nacional de General Sarmiento.
 	
 	Abstract
 	
-	The $\mathcal{G}^0$ model is a good choice to explain the statistical characteristics of data that come from synthetic aperture radar (SAR) images, because under this model, areas with different degrees of texture can be characterized through their parameters. This thesis proposes a new strategy for the estimation of the texture parameter of the $ \ mathcal G_0 $ model for intensity data, through the minimization of stochastic distances between the theoretical density function, and a non-parametric estimation of the underlying density function that comes from the observed data using asymmetric kernels. The performance of these estimators will be compared, in terms of bias and mean square error, with those obtained by the Method of Moments, Maximum Likelihood and Logcumulants. In addition, convergence properties will be studied, as well as their robustness under contamination.
+	The $\mathcal{G}^0$ model is a good choice to explain the statistical characteristics of data that come from synthetic aperture radar (SAR) images, because under this model, areas with different degrees of texture can be characterized through their parameters. This thesis proposes a new strategy for the estimation of the texture parameter of the $ \ mathcal G_0 $ model for intensity data, through the minimization of stochastic distances between the theoretical density function, and a non-parametric estimation of the underlying density function that comes from the observed data using asymmetric kernels. The performance of these estimators will be compared, in terms of bias and mean square error, with those obtained by the Method of Moments, Maximum Likelihood and Logcumulantes. In addition, convergence properties will be studied, as well as their robustness under contamination.
 
 \item Aprobado por (Apellidos y Nombres del Jurado):
 
